[package]
name = "dominator"
version = "0.4.4"
authors = ["Pauan <pcxunlimited@gmail.com>"]
description = "Zero cost declarative DOM library using FRP signals"
repository = "https://github.com/Pauan/rust-dominator"
homepage = "https://github.com/Pauan/rust-dominator"
readme = "README.md"
license = "MIT"
keywords = ["javascript", "dom", "reactive", "signal", "frp"]
categories = ["web-programming", "template-engine", "wasm"]

[dependencies]
stdweb-derive = "0.5.0"
lazy_static = "1.0.0"
discard = "1.0.3"
pin-utils = "0.1.0-alpha.3"
futures-channel-preview = "0.3.0-alpha.15"
futures-util-preview = "0.3.0-alpha.15"
futures-signals = "0.3.0"

[dependencies.stdweb]
version = "0.4.10"
features = ["experimental_features_which_may_break_on_minor_version_bumps"]

[profile.release]
debug-assertions = true

[profile.bench]
debug-assertions = true
