[package]
name = "dominator"
version = "0.5.8"
authors = ["Pauan <pauanyu+github@pm.me>"]
description = "Zero cost declarative DOM library using FRP signals"
repository = "https://github.com/Pauan/rust-dominator"
homepage = "https://github.com/Pauan/rust-dominator"
readme = "README.md"
license = "MIT"
keywords = ["javascript", "dom", "reactive", "signal", "frp"]
categories = ["gui", "web-programming", "wasm"]
edition = "2018"

[features]
# TODO should this enable interning ?
default = ["wasm-bindgen/enable-interning"]

[dependencies]
lazy_static = "1.3.0"
discard = "1.0.3"
pin-utils = "0.1.0-alpha.4"
futures-channel = "0.3.0"
futures-util = "0.3.0"
futures-signals = "0.3.5"
wasm-bindgen = "0.2.48"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.4.9"

[dependencies.web-sys]
version = "0.3.22"
features = [
    "CharacterData",
    "Comment",
    "CssRule",
    "CssRuleList",
    "CssStyleDeclaration",
    "CssStyleRule",
    "CssStyleSheet",
    "Document",
    "DomTokenList",
    "Element",
    "Event",
    "EventTarget",
    "FocusEvent",
    "History",
    "InputEvent",
    "HtmlElement",
    "HtmlHeadElement",
    "HtmlInputElement",
    "HtmlStyleElement",
    "HtmlTextAreaElement",
    "KeyboardEvent",
    "Location",
    "MouseEvent",
    "Node",
    "StyleSheet",
    "SvgElement",
    "Text",
    "UiEvent",
    "Window",
]

[profile.release]
debug-assertions = true

[profile.bench]
debug-assertions = true
