[package]
name = "animation"
version = "0.1.0"
description = "Animation demo using dominator"
authors = ["Pauan <pcxunlimited@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
license = "MIT"
edition = "2018"

[profile.release]
lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
dominator = { path = "../.." }
wasm-bindgen = "0.2.45"
futures-signals = "0.3.0"
futures-preview = "0.3.0-alpha.16"

[dependencies.web-sys]
version = "0.3.22"
features = [
    "console",
]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"
