[package]
name = "animation"
version = "0.1.0"
description = "Animation demo using dominator"
authors = ["Pauan <pauanyu+github@pm.me>"]
categories = ["wasm"]
readme = "README.md"
license = "MIT"
edition = "2018"

[profile.release]
lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.5"
dominator = "0.5.0"
wasm-bindgen = "0.2.45"
futures-signals = "0.3.0"
futures = "0.3.0"

[dependencies.web-sys]
version = "0.3.22"
features = [
    "console",
]
