[package]
name = "async"
version = "0.1.0"
description = "Async example using dominator"
authors = ["Pauan <pauanyu+github@pm.me>"]
categories = ["wasm"]
readme = "README.md"
license = "MIT"
edition = "2018"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3  # 3 => fast, s/z => small

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]  # O4 => fast, Oz/Os => small

[lib]
crate-type = ["cdylib"]

[workspace]

[dependencies]
console_error_panic_hook = "0.1.6"
dominator = "0.5.18"
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.24"
futures = "0.3.15"
futures-signals = "0.3.20"
gloo-timers = { version = "0.2.1", features = ["futures"] }
js-sys = "0.3.51"
once_cell = "1.7.2"
serde_json = "1.0.64"
serde_derive = "1.0.126"
serde = "1.0.126"

[dependencies.web-sys]
version = "0.3.51"
features = [
"console",
    "AbortController",
    "AbortSignal",
    "Headers",
    "Response",
    "RequestInit",
    "Window",
]
