[package]
name = "todomvc"
version = "0.1.0"
authors = ["Pauan <pcxunlimited@gmail.com>"]

[dependencies]
dominator = { path = "../.." }
futures-signals = "0.2.0"
serde_json = "1.0.10"
serde_derive = "1.0.27"

[dependencies.serde]
version = "1.0.27"
features = ["rc"]

[dependencies.stdweb]
version = "0.4.10"
features = ["experimental_features_which_may_break_on_minor_version_bumps"]
