[package]
name = "todomvc"
version = "0.1.0"
description = "TodoMVC using dominator"
authors = ["Pauan <pauanyu+github@pm.me>"]
categories = ["wasm"]
readme = "README.md"
license = "MIT"
edition = "2018"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3  # 3 => fast, s/z => small

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]  # O4 => fast, Oz/Os => small

[lib]
crate-type = ["cdylib"]

[workspace]

[dependencies]
console_error_panic_hook = "0.1.6"
dominator = "0.5.21"
wasm-bindgen = "0.2.74"
futures-signals = "0.3.20"
serde_json = "1.0.64"
serde_derive = "1.0.126"

[dependencies.serde]
version = "1.0.126"
features = ["rc"]

[dependencies.web-sys]
version = "0.3.51"
features = [
    "HtmlInputElement",
    "Storage",
    "Url",
]
