[package]
name = "counter"
version = "0.1.0"
authors = ["Pauan <pcxunlimited@gmail.com>"]
edition = "2018"

[dependencies]
dominator = { path = "../../.." }
futures-signals = "0.3.0"
lazy_static = "1.0.0"

[dependencies.stdweb]
version = "0.4.10"
features = ["experimental_features_which_may_break_on_minor_version_bumps"]
